pwn_parser.output
   0  $accept : file $end

   1  file : declrs

   2  declrs : decl
   3         | declrs decl

   4  list : stmt
   5       | list stmt

   6  decl : var ';'
   7       | var '=' expr ';'
   8       | func

   9  declrsblock : declblock
  10              | declrsblock declblock

  11  declblock : var ';'
  12            | var '=' expr ';'

  13  func : gen_type tIDENTIFIER '(' args ')'
  14       | gen_type tIDENTIFIER '(' args ')' block
  15       | gen_type tIDENTIFIER '(' args ')' '=' lit block
  16       | gen_type tIDENTIFIER '(' args ')' '=' lit ';'
  17       | gen_type tIDENTIFIER '(' ')'
  18       | gen_type tIDENTIFIER '(' ')' block
  19       | gen_type tIDENTIFIER '(' ')' '=' lit block
  20       | gen_type tIDENTIFIER '(' ')' '=' lit ';'
  21       | tLOCAL gen_type tIDENTIFIER '(' args ')'
  22       | tIMPORT gen_type tIDENTIFIER '(' args ')'
  23       | tLOCAL gen_type tIDENTIFIER '(' args ')' block
  24       | tIMPORT gen_type tIDENTIFIER '(' args ')' block
  25       | tLOCAL gen_type tIDENTIFIER '(' args ')' '=' lit block
  26       | tIMPORT gen_type tIDENTIFIER '(' args ')' '=' lit block
  27       | tLOCAL gen_type tIDENTIFIER '(' args ')' '=' lit ';'
  28       | tIMPORT gen_type tIDENTIFIER '(' args ')' '=' lit ';'
  29       | tLOCAL gen_type tIDENTIFIER '(' ')'
  30       | tIMPORT gen_type tIDENTIFIER '(' ')'
  31       | tLOCAL gen_type tIDENTIFIER '(' ')' block
  32       | tIMPORT gen_type tIDENTIFIER '(' ')' block
  33       | tLOCAL gen_type tIDENTIFIER '(' ')' '=' lit block
  34       | tIMPORT gen_type tIDENTIFIER '(' ')' '=' lit block
  35       | tLOCAL gen_type tIDENTIFIER '(' ')' '=' lit ';'
  36       | tIMPORT gen_type tIDENTIFIER '(' ')' '=' lit ';'

  37  block : '{' inblock '}'
  38        | '{' '}'

  39  inblock : declrsblock
  40          | list
  41          | declrsblock list

  42  stmt : ';'
  43       | expr ';'
  44       | expr tPRINTLN
  45       | expr tPRINT
  46       | tNEXT tINTEGER ';'
  47       | tNEXT ';'
  48       | tSTOP tINTEGER ';'
  49       | tSTOP ';'
  50       | tREAD lval ';'
  51       | tREPEAT '(' exprs ';' exprs ';' exprs ')' stmt
  52       | tIF '(' expr ')' stmt
  53       | tIF '(' expr ')' stmt tELSE stmt
  54       | tRETURN
  55       | block

  56  lit : litint
  57      | tREAL
  58      | str

  59  litint : tINTEGER

  60  expr : lit
  61       | lval '=' expr
  62       | lval '?'
  63       | '-' expr
  64       | '+' tINTEGER
  65       | expr '+' expr
  66       | expr '-' expr
  67       | expr '*' expr
  68       | expr '/' expr
  69       | expr '%' expr
  70       | expr '<' expr
  71       | expr '>' expr
  72       | expr tGE expr
  73       | expr tLE expr
  74       | expr tNE expr
  75       | expr tEQ expr
  76       | '~' expr
  77       | expr '&' expr
  78       | expr '|' expr
  79       | '(' expr ')'
  80       | lval
  81       | funccall
  82       | '[' litint ']'
  83       | '*' lval
  84       | "<*>" lval

  85  exprs : expr
  86        | exprs ',' expr

  87  str : tSTRING
  88      | str tSTRING

  89  args : arg
  90       | args ',' arg

  91  arg : type tIDENTIFIER

  92  lval : tIDENTIFIER
  93       | tIDENTIFIER '[' expr ']'

  94  funccall : tIDENTIFIER '(' identifiers ')'
  95           | tIDENTIFIER '(' ')'

  96  identifiers : expr
  97              | identifiers ',' expr

  98  var : gen_type tIDENTIFIER
  99      | '<' gen_type '>' tIDENTIFIER
 100      | tLOCAL gen_type tIDENTIFIER
 101      | tLOCAL '<' gen_type '>' tIDENTIFIER
 102      | tIMPORT gen_type tIDENTIFIER
 103      | tIMPORT '<' gen_type '>' tIDENTIFIER

 104  gen_type : type

 105  type : tINTEGERSYMB
 106       | tREALSYMB
 107       | tSTRINGSYMB
 108       | tPRINT

state 0
	$accept : . file $end  (0)

	tPRINT  shift 1
	tINTEGERSYMB  shift 2
	tREALSYMB  shift 3
	tSTRINGSYMB  shift 4
	tLOCAL  shift 5
	tIMPORT  shift 6
	'<'  shift 7
	.  error

	file  goto 8
	decl  goto 9
	func  goto 10
	var  goto 11
	declrs  goto 12
	type  goto 13
	gen_type  goto 14


state 1
	type : tPRINT .  (108)

	.  reduce 108


state 2
	type : tINTEGERSYMB .  (105)

	.  reduce 105


state 3
	type : tREALSYMB .  (106)

	.  reduce 106


state 4
	type : tSTRINGSYMB .  (107)

	.  reduce 107


state 5
	func : tLOCAL . gen_type tIDENTIFIER '(' args ')'  (21)
	func : tLOCAL . gen_type tIDENTIFIER '(' args ')' block  (23)
	func : tLOCAL . gen_type tIDENTIFIER '(' args ')' '=' lit block  (25)
	func : tLOCAL . gen_type tIDENTIFIER '(' args ')' '=' lit ';'  (27)
	func : tLOCAL . gen_type tIDENTIFIER '(' ')'  (29)
	func : tLOCAL . gen_type tIDENTIFIER '(' ')' block  (31)
	func : tLOCAL . gen_type tIDENTIFIER '(' ')' '=' lit block  (33)
	func : tLOCAL . gen_type tIDENTIFIER '(' ')' '=' lit ';'  (35)
	var : tLOCAL . gen_type tIDENTIFIER  (100)
	var : tLOCAL . '<' gen_type '>' tIDENTIFIER  (101)

	tPRINT  shift 1
	tINTEGERSYMB  shift 2
	tREALSYMB  shift 3
	tSTRINGSYMB  shift 4
	'<'  shift 15
	.  error

	type  goto 13
	gen_type  goto 16


state 6
	func : tIMPORT . gen_type tIDENTIFIER '(' args ')'  (22)
	func : tIMPORT . gen_type tIDENTIFIER '(' args ')' block  (24)
	func : tIMPORT . gen_type tIDENTIFIER '(' args ')' '=' lit block  (26)
	func : tIMPORT . gen_type tIDENTIFIER '(' args ')' '=' lit ';'  (28)
	func : tIMPORT . gen_type tIDENTIFIER '(' ')'  (30)
	func : tIMPORT . gen_type tIDENTIFIER '(' ')' block  (32)
	func : tIMPORT . gen_type tIDENTIFIER '(' ')' '=' lit block  (34)
	func : tIMPORT . gen_type tIDENTIFIER '(' ')' '=' lit ';'  (36)
	var : tIMPORT . gen_type tIDENTIFIER  (102)
	var : tIMPORT . '<' gen_type '>' tIDENTIFIER  (103)

	tPRINT  shift 1
	tINTEGERSYMB  shift 2
	tREALSYMB  shift 3
	tSTRINGSYMB  shift 4
	'<'  shift 17
	.  error

	type  goto 13
	gen_type  goto 18


state 7
	var : '<' . gen_type '>' tIDENTIFIER  (99)

	tPRINT  shift 1
	tINTEGERSYMB  shift 2
	tREALSYMB  shift 3
	tSTRINGSYMB  shift 4
	.  error

	type  goto 13
	gen_type  goto 19


state 8
	$accept : file . $end  (0)

	$end  accept


state 9
	declrs : decl .  (2)

	.  reduce 2


state 10
	decl : func .  (8)

	.  reduce 8


state 11
	decl : var . ';'  (6)
	decl : var . '=' expr ';'  (7)

	'='  shift 20
	';'  shift 21
	.  error


state 12
	file : declrs .  (1)
	declrs : declrs . decl  (3)

	tPRINT  shift 1
	tINTEGERSYMB  shift 2
	tREALSYMB  shift 3
	tSTRINGSYMB  shift 4
	tLOCAL  shift 5
	tIMPORT  shift 6
	'<'  shift 7
	$end  reduce 1

	decl  goto 22
	func  goto 10
	var  goto 11
	type  goto 13
	gen_type  goto 14


state 13
	gen_type : type .  (104)

	.  reduce 104


state 14
	func : gen_type . tIDENTIFIER '(' args ')'  (13)
	func : gen_type . tIDENTIFIER '(' args ')' block  (14)
	func : gen_type . tIDENTIFIER '(' args ')' '=' lit block  (15)
	func : gen_type . tIDENTIFIER '(' args ')' '=' lit ';'  (16)
	func : gen_type . tIDENTIFIER '(' ')'  (17)
	func : gen_type . tIDENTIFIER '(' ')' block  (18)
	func : gen_type . tIDENTIFIER '(' ')' '=' lit block  (19)
	func : gen_type . tIDENTIFIER '(' ')' '=' lit ';'  (20)
	var : gen_type . tIDENTIFIER  (98)

	tIDENTIFIER  shift 23
	.  error


state 15
	var : tLOCAL '<' . gen_type '>' tIDENTIFIER  (101)

	tPRINT  shift 1
	tINTEGERSYMB  shift 2
	tREALSYMB  shift 3
	tSTRINGSYMB  shift 4
	.  error

	type  goto 13
	gen_type  goto 24


state 16
	func : tLOCAL gen_type . tIDENTIFIER '(' args ')'  (21)
	func : tLOCAL gen_type . tIDENTIFIER '(' args ')' block  (23)
	func : tLOCAL gen_type . tIDENTIFIER '(' args ')' '=' lit block  (25)
	func : tLOCAL gen_type . tIDENTIFIER '(' args ')' '=' lit ';'  (27)
	func : tLOCAL gen_type . tIDENTIFIER '(' ')'  (29)
	func : tLOCAL gen_type . tIDENTIFIER '(' ')' block  (31)
	func : tLOCAL gen_type . tIDENTIFIER '(' ')' '=' lit block  (33)
	func : tLOCAL gen_type . tIDENTIFIER '(' ')' '=' lit ';'  (35)
	var : tLOCAL gen_type . tIDENTIFIER  (100)

	tIDENTIFIER  shift 25
	.  error


state 17
	var : tIMPORT '<' . gen_type '>' tIDENTIFIER  (103)

	tPRINT  shift 1
	tINTEGERSYMB  shift 2
	tREALSYMB  shift 3
	tSTRINGSYMB  shift 4
	.  error

	type  goto 13
	gen_type  goto 26


state 18
	func : tIMPORT gen_type . tIDENTIFIER '(' args ')'  (22)
	func : tIMPORT gen_type . tIDENTIFIER '(' args ')' block  (24)
	func : tIMPORT gen_type . tIDENTIFIER '(' args ')' '=' lit block  (26)
	func : tIMPORT gen_type . tIDENTIFIER '(' args ')' '=' lit ';'  (28)
	func : tIMPORT gen_type . tIDENTIFIER '(' ')'  (30)
	func : tIMPORT gen_type . tIDENTIFIER '(' ')' block  (32)
	func : tIMPORT gen_type . tIDENTIFIER '(' ')' '=' lit block  (34)
	func : tIMPORT gen_type . tIDENTIFIER '(' ')' '=' lit ';'  (36)
	var : tIMPORT gen_type . tIDENTIFIER  (102)

	tIDENTIFIER  shift 27
	.  error


state 19
	var : '<' gen_type . '>' tIDENTIFIER  (99)

	'>'  shift 28
	.  error


state 20
	decl : var '=' . expr ';'  (7)

	tINTEGER  shift 29
	tREAL  shift 30
	tIDENTIFIER  shift 31
	tSTRING  shift 32
	'~'  shift 33
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'('  shift 37
	'['  shift 38
	"<*>"  shift 39
	.  error

	expr  goto 40
	lit  goto 41
	litint  goto 42
	funccall  goto 43
	str  goto 44
	lval  goto 45


state 21
	decl : var ';' .  (6)

	.  reduce 6


state 22
	declrs : declrs decl .  (3)

	.  reduce 3


state 23
	func : gen_type tIDENTIFIER . '(' args ')'  (13)
	func : gen_type tIDENTIFIER . '(' args ')' block  (14)
	func : gen_type tIDENTIFIER . '(' args ')' '=' lit block  (15)
	func : gen_type tIDENTIFIER . '(' args ')' '=' lit ';'  (16)
	func : gen_type tIDENTIFIER . '(' ')'  (17)
	func : gen_type tIDENTIFIER . '(' ')' block  (18)
	func : gen_type tIDENTIFIER . '(' ')' '=' lit block  (19)
	func : gen_type tIDENTIFIER . '(' ')' '=' lit ';'  (20)
	var : gen_type tIDENTIFIER .  (98)

	'('  shift 46
	'='  reduce 98
	';'  reduce 98


state 24
	var : tLOCAL '<' gen_type . '>' tIDENTIFIER  (101)

	'>'  shift 47
	.  error


state 25
	func : tLOCAL gen_type tIDENTIFIER . '(' args ')'  (21)
	func : tLOCAL gen_type tIDENTIFIER . '(' args ')' block  (23)
	func : tLOCAL gen_type tIDENTIFIER . '(' args ')' '=' lit block  (25)
	func : tLOCAL gen_type tIDENTIFIER . '(' args ')' '=' lit ';'  (27)
	func : tLOCAL gen_type tIDENTIFIER . '(' ')'  (29)
	func : tLOCAL gen_type tIDENTIFIER . '(' ')' block  (31)
	func : tLOCAL gen_type tIDENTIFIER . '(' ')' '=' lit block  (33)
	func : tLOCAL gen_type tIDENTIFIER . '(' ')' '=' lit ';'  (35)
	var : tLOCAL gen_type tIDENTIFIER .  (100)

	'('  shift 48
	'='  reduce 100
	';'  reduce 100


state 26
	var : tIMPORT '<' gen_type . '>' tIDENTIFIER  (103)

	'>'  shift 49
	.  error


state 27
	func : tIMPORT gen_type tIDENTIFIER . '(' args ')'  (22)
	func : tIMPORT gen_type tIDENTIFIER . '(' args ')' block  (24)
	func : tIMPORT gen_type tIDENTIFIER . '(' args ')' '=' lit block  (26)
	func : tIMPORT gen_type tIDENTIFIER . '(' args ')' '=' lit ';'  (28)
	func : tIMPORT gen_type tIDENTIFIER . '(' ')'  (30)
	func : tIMPORT gen_type tIDENTIFIER . '(' ')' block  (32)
	func : tIMPORT gen_type tIDENTIFIER . '(' ')' '=' lit block  (34)
	func : tIMPORT gen_type tIDENTIFIER . '(' ')' '=' lit ';'  (36)
	var : tIMPORT gen_type tIDENTIFIER .  (102)

	'('  shift 50
	'='  reduce 102
	';'  reduce 102


state 28
	var : '<' gen_type '>' . tIDENTIFIER  (99)

	tIDENTIFIER  shift 51
	.  error


state 29
	litint : tINTEGER .  (59)

	.  reduce 59


state 30
	lit : tREAL .  (57)

	.  reduce 57


state 31
	lval : tIDENTIFIER .  (92)
	lval : tIDENTIFIER . '[' expr ']'  (93)
	funccall : tIDENTIFIER . '(' identifiers ')'  (94)
	funccall : tIDENTIFIER . '(' ')'  (95)

	'('  shift 52
	'['  shift 53
	tPRINT  reduce 92
	tPRINTLN  reduce 92
	tGE  reduce 92
	tLE  reduce 92
	tEQ  reduce 92
	tNE  reduce 92
	'='  reduce 92
	'|'  reduce 92
	'&'  reduce 92
	'>'  reduce 92
	'<'  reduce 92
	'+'  reduce 92
	'-'  reduce 92
	'*'  reduce 92
	'/'  reduce 92
	'%'  reduce 92
	'?'  reduce 92
	')'  reduce 92
	']'  reduce 92
	';'  reduce 92
	','  reduce 92


state 32
	str : tSTRING .  (87)

	.  reduce 87


state 33
	expr : '~' . expr  (76)

	tINTEGER  shift 29
	tREAL  shift 30
	tIDENTIFIER  shift 31
	tSTRING  shift 32
	'~'  shift 33
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'('  shift 37
	'['  shift 38
	"<*>"  shift 39
	.  error

	expr  goto 54
	lit  goto 41
	litint  goto 42
	funccall  goto 43
	str  goto 44
	lval  goto 45


state 34
	expr : '+' . tINTEGER  (64)

	tINTEGER  shift 55
	.  error


state 35
	expr : '-' . expr  (63)

	tINTEGER  shift 29
	tREAL  shift 30
	tIDENTIFIER  shift 31
	tSTRING  shift 32
	'~'  shift 33
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'('  shift 37
	'['  shift 38
	"<*>"  shift 39
	.  error

	expr  goto 56
	lit  goto 41
	litint  goto 42
	funccall  goto 43
	str  goto 44
	lval  goto 45


state 36
	expr : '*' . lval  (83)

	tIDENTIFIER  shift 57
	.  error

	lval  goto 58


state 37
	expr : '(' . expr ')'  (79)

	tINTEGER  shift 29
	tREAL  shift 30
	tIDENTIFIER  shift 31
	tSTRING  shift 32
	'~'  shift 33
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'('  shift 37
	'['  shift 38
	"<*>"  shift 39
	.  error

	expr  goto 59
	lit  goto 41
	litint  goto 42
	funccall  goto 43
	str  goto 44
	lval  goto 45


state 38
	expr : '[' . litint ']'  (82)

	tINTEGER  shift 29
	.  error

	litint  goto 60


state 39
	expr : "<*>" . lval  (84)

	tIDENTIFIER  shift 57
	.  error

	lval  goto 61


state 40
	decl : var '=' expr . ';'  (7)
	expr : expr . '+' expr  (65)
	expr : expr . '-' expr  (66)
	expr : expr . '*' expr  (67)
	expr : expr . '/' expr  (68)
	expr : expr . '%' expr  (69)
	expr : expr . '<' expr  (70)
	expr : expr . '>' expr  (71)
	expr : expr . tGE expr  (72)
	expr : expr . tLE expr  (73)
	expr : expr . tNE expr  (74)
	expr : expr . tEQ expr  (75)
	expr : expr . '&' expr  (77)
	expr : expr . '|' expr  (78)

	tGE  shift 62
	tLE  shift 63
	tEQ  shift 64
	tNE  shift 65
	'|'  shift 66
	'&'  shift 67
	'>'  shift 68
	'<'  shift 69
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	';'  shift 75
	.  error


state 41
	expr : lit .  (60)

	.  reduce 60


state 42
	lit : litint .  (56)

	.  reduce 56


state 43
	expr : funccall .  (81)

	.  reduce 81


state 44
	lit : str .  (58)
	str : str . tSTRING  (88)

	tSTRING  shift 76
	tPRINT  reduce 58
	tPRINTLN  reduce 58
	tGE  reduce 58
	tLE  reduce 58
	tEQ  reduce 58
	tNE  reduce 58
	'|'  reduce 58
	'&'  reduce 58
	'>'  reduce 58
	'<'  reduce 58
	'+'  reduce 58
	'-'  reduce 58
	'*'  reduce 58
	'/'  reduce 58
	'%'  reduce 58
	')'  reduce 58
	']'  reduce 58
	';'  reduce 58
	'{'  reduce 58
	','  reduce 58


state 45
	expr : lval . '=' expr  (61)
	expr : lval . '?'  (62)
	expr : lval .  (80)

	'='  shift 77
	'?'  shift 78
	tPRINT  reduce 80
	tPRINTLN  reduce 80
	tGE  reduce 80
	tLE  reduce 80
	tEQ  reduce 80
	tNE  reduce 80
	'|'  reduce 80
	'&'  reduce 80
	'>'  reduce 80
	'<'  reduce 80
	'+'  reduce 80
	'-'  reduce 80
	'*'  reduce 80
	'/'  reduce 80
	'%'  reduce 80
	')'  reduce 80
	']'  reduce 80
	';'  reduce 80
	','  reduce 80

